# MarketBot

./: .gitignore  CMakeLists.txt
include/: logger.h  marketbot.h  mycurlhelper.h  notifier.h
src/: logger.cpp  main.cpp  marketbot.cpp  mycurlhelper.cpp  notifier.cpp
